# nova-docker

./: .gitignore  README.md  nova-docker.spec
baseimage/: mkimage-centos.sh
c2o-migrate/: keystone-test.py  keystone.py  test.py
dockerfile/suningbase/: 90-nproc.conf  Dockerfile  startup.sh
dockerfile/suningbase/ssh/: suning_keys
dockerfile/suningbase/yum.repos.d/: cd.repo  salt.repo
nova-docker-1.1/: requirements.txt
nova-docker-1.1/novadocker/virt/docker/: client.py  cpuset_info.py  driver.py  network.py  vifs.py
nova-docker-1.2/nova_docker.egg-info/: requires.txt
nova-docker-1.2/novadocker/virt/docker/: client.py  cpuset_info.py  driver.py  driver_old.py  hostinfo.py  vifs.py
nova-docker/nova_docker.egg-info/: SOURCES.txt
nova-docker/novadocker/virt/: hostutils.py
nova-docker/novadocker/virt/docker/: client.py  cpuset_info.py  driver.py  host_monitor.py  hostinfo.py  network.py  vifs.py
novadocker/: nova-docker.spec
novadocker/nova-docker-9045ca4/: setup.cfg
novadocker/nova-docker-9045ca4/nova_docker.egg-info/: PKG-INFO
novadocker/nova-docker-9045ca4/novadocker/virt/docker/: client.py  driver.py  hostinfo.py  vifs.py
ocf/: commant-agent  consoleauth
ocf/gukai/: mysql-wss
ocf/suning/: mysql-wss  neutron-agent-lbaas
suningbase/yum.repos.d/: cd.repo
