[files]
packages = 
	novadocker

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[upload_sphinx]
upload-dir = doc/build/html

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = novadocker/locale/nova-docker.pot

[compile_catalog]
directory = novadocker/locale
domain = nova-docker

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[update_catalog]
domain = nova-docker
output_dir = novadocker/locale
input_file = novadocker/locale/nova-docker.pot

[metadata]
description-file = 
	README.rst
name = nova-docker
author = OpenStack
home-page = http://www.openstack.org/
summary = Docker driver for OpenStack Nova.
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
author-email = openstack-dev@lists.openstack.org

